<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bit.hawkhje1.locationteleportergps.MainActivity"
    android:gravity="center|center_vertical|center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:layout_margin="0dp"
        android:weightSum="1"
        android:gravity="center"
        android:nestedScrollingEnabled="true"
        android:scrollIndicators="right">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude_title"
                android:id="@+id/tvLongitudeTitle"
                android:paddingRight="@dimen/longitude_title_padding_right"
                android:width="@dimen/coordinate_titles_width" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_longitude_value"
                android:id="@+id/tvLongitudeValue" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|clip_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude_title"
                android:id="@+id/tvLatitudeTitle"
                android:width="@dimen/coordinate_titles_width"
                android:paddingTop="@dimen/top_padding5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_latitude_value"
                android:id="@+id/tvLatitudeValue"
                android:paddingTop="@dimen/top_padding5" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/default_location"
            android:id="@+id/tvLocation"
            android:paddingTop="@dimen/top_padding5"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_no_image"
            android:id="@+id/tvImageNotFound"
            android:gravity="center|center_vertical|center_horizontal"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imgLocation"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/img_description"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp" />

    </LinearLayout>
</LinearLayout>
